# app-template

./: Dockerfile  README.md  doover_config.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yml  lint-and-test.yml  run-linting.yml  run-tests.yml
application/: Dockerfile  __main__.py  app_config.py  application.py
application/tests/: test_basic.py
simulators/sample/: Dockerfile  Pipfile  sample_simulator.py
src/app_template/: app_config.py  app_state.py  app_ui.py  application.py
tests/: test_imports.py
