[project]
name = "app-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover",
    "transitions>=0.9.2",
]

[project.scripts]
doover-app-run = "app_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pydoover = { git = "https://spaneng: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@github.com/spaneng/pydoover", rev = "9a169a85" }

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
